# CCometixLine

./: .gitattributes  .gitignore  Cargo.toml
docs/: ROADMAP.md
src/: cli.rs  main.rs
src/config/: types.rs
src/core/: mod.rs  statusline.rs  subagent.rs
src/core/render/: loom.rs  mod.rs  palette.rs  phase.rs  state.rs  tests.rs  wrap.rs
src/core/render/phases/: awakening.rs  composition.rs  exhale.rs  filter.rs  horizon.rs  join.rs  mod.rs  seam.rs  separator.rs  width.rs
src/core/segments/: context_window.rs  custom.rs  mod.rs  token_rate.rs  weekly_usage.rs
src/ui/: app.rs
src/ui/components/: help.rs  mod.rs  preview.rs  segment_list.rs  settings.rs  width_settings.rs
src/ui/themes/: presets.rs  theme_cometix.rs  theme_default.rs
src/utils/: claude_code_patcher.rs
tests/: render_snapshots.rs
tests/snapshots/: cometix_w20.snap  cometix_w40.snap  cometix_wnone.snap  default_w20.snap  default_w40.snap  default_wnone.snap  gruvbox_w20.snap  gruvbox_w40.snap  gruvbox_wnone.snap  minimal_w20.snap  minimal_w40.snap  minimal_w80.snap  nord_w20.snap  nord_w40.snap  nord_wnone.snap  powerline-dark_w20.snap  powerline-dark_w40.snap  powerline-dark_wnone.snap  powerline-light_w20.snap  powerline-light_w40.snap  powerline-light_wnone.snap  powerline-rose-pine_w20.snap  powerline-rose-pine_w40.snap  powerline-rose-pine_w80.snap  powerline-tokyo-night_w20.snap  powerline-tokyo-night_w40.snap  powerline-tokyo-night_wnone.snap
