[package]
name = "ccometixline"
version = "1.1.2"
edition = "2021"
description = "CCometixLine (ccline) - High-performance Claude Code StatusLine tool written in Rust"
authors = ["Haleclipse"]
license = "MIT"
repository = "https://github.com/Haleclipse/CCometixLine"
readme = "README.md"
keywords = ["claude", "statusline", "powerline", "rust", "claude-code"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
toml = "1.0"

ratatui = "0.30"
crossterm = "0.29"
ansi_term = "0.12"
ansi-to-tui = "8.0"
unicode-width = "0.2"

ureq = { version = "3.0", features = ["json"] }
semver = "1.0"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6.0"
regex = "1.0"
tree-sitter = "0.26"
tree-sitter-javascript = "0.25"
